Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Введение"
-description: "Welcome to the home of your new documentation"
+description: "Документация по интеграции Finmar API"
 ---
 
 <img
@@ -17,21 +17,25 @@ description: "Welcome to the home of your new documentation"
 
 The first step to world-class documentation is setting up your editing environments.
 
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
+## Фиатные платежи
 
 <CardGroup cols={2}>
-  <Card title="Customize Style" icon="palette" href="https://mintlify.com/docs/settings/global">
-    Customize your docs to your company's colors and brands
+  <Card title="<Банковские карты" icon="palette" href="https://mintlify.com/docs/settings/global">
+  
   </Card>
-  <Card title="Reference APIs" icon="code" href="https://mintlify.com/docs/api-playground/openapi">
-    Automatically generate endpoints from an OpenAPI spec
+  <Card title="Openbanking" icon="money-bill-transfer" href="/products/openbanking">
+  
   </Card>
-  <Card title="Add Components" icon="screwdriver-wrench" href="https://mintlify.com/docs/content/components/accordions">
-    Build interactive features and designs to guide your users
+  <Card title="Apple Pay" icon="cc-apple-pay" href="/products/applepay">
+   
   </Card>
-  <Card title="Get Inspiration" icon="stars" href="https://mintlify.com/customers">
-    Check out our showcase of our favorite documentation
+  <Card title="Google Pay" icon="google-pay" href="/products/googlepay">
+  
+  </Card>
+    <Card title="Blik" icon="mobile-button" href="/products/blik">
+  
+  </Card>
+      <Card title="Widget Integration" icon="dumpster-fire" href="/products/widget">
+  
   </Card>
 </CardGroup>
