--- a/index.mdx
+++ b/index.mdx
@@ -20,7 +20,7 @@ The first step to world-class documentation is setting up your editing environme
 ## Фиатные платежи
 
 <CardGroup cols={2}>
-  <Card title="<Банковские карты" icon="palette" href="https://mintlify.com/docs/settings/global">
+  <Card title="Банковские карты" icon="palette" href="products/card">
   
   </Card>
   <Card title="Openbanking" icon="money-bill-transfer" href="/products/openbanking">
