Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -5,13 +5,13 @@ description: "Документация по интеграции Finmar API"
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
+  src="/images/payments.svg"
+  alt="Online Payments"
 />
 
 <img
   className="hidden dark:block"
-  src="/images/hero-dark.png"
+  src="/images/payments.svg"
   alt="Hero Dark"
 />
 
