--- a/products/openbanking.mdx
+++ b/products/openbanking.mdx
@@ -30,36 +30,7 @@ sequenceDiagram
   <Step title="Передача данных для создания операции">
     Сайт проекта отправляет в Finmar API данные требуемые для создания операции.
 
-    <Accordion title="Пример запроса создания" icon="terminal">
-      ```bash Запрос создания операции
-      curl --location 'https://sandbox.finmar.tech/prepare2/api/v3/checkout' \
-      --header 'Content-Type: application/json' \
-      --header 'Authorization: Basic cHJldmlld190ZXN0OndkMzAxN2F6aW01aXNva3E=' \
-      --data-raw '{
-      "client_operation_id": "DSPn7pryR4QYBQpCGq",
-      "report_metadata": "DSPn7pryR4QYBQpCGq",
-      "payment_profile": "sandbox",
-      "method": "openbanking",
-      "project_id":"s002",
-      "amount": {
-          "amount": "100",
-          "currency": "EUR"
-      },
-      "user": {
-          "user_id": "u123",
-          "email": "globocheck@gmail.com",
-          "statistics": {
-              "registered_at": "2021-11-02",
-              "total_deposit_count": 485,
-              "total_withdrawal_count": 693
-          }
-      },
-      "url_callback": "https://finmar.requestcatcher.com/?callback",
-      "url_redirect_success": "https://finmar.requestcatcher.com?success",
-      "url_redirect_fail": "https://finmar.requestcatcher.com?fail"
-      }'
-      ```
-    </Accordion>
+  
   </Step>
   <Step title="Получение платёжной страницы">
     Finmar API создает уникальный URL и возвращает его сайту проекта
@@ -86,10 +57,71 @@ sequenceDiagram
 
   </Step>
   <Step title="Уведомление о завершении операции">
-    Finmar API отправляет сайту проекта уведомление о завершении транзакции. Пример:
+    Finmar API отправляет сайту проекта уведомление о завершении транзакции. 
+  </Step>
 
-    <Accordion title="Пример уведомления" icon="sparkles">
-      ```json
+  <Step title="Обработка уведомления">
+Проект выполняет обработку обратного уведомления.
+
+  </Step>
+
+  <Step title="Подтверждение обработки">
+  После успешной обработки операции, необходимо подтвердить её обработку, используя методы [/collector/api/v3/client_confirm_payment_by_reference_id](/api-reference/фиатные-платежи/подтвердить-операцию-по-reference_id) или 
+  [/collector/api/v3/client_confirm_payment_by_client_operation_id](/api-reference/фиатные-платежи/подтвердить-операцию-по-client_operation_id)
+  </Step>
+
+</Steps>
+
+## Получение платёжной страницы
+### Пример запроса
+
+   ```bash Запрос создания операции
+      curl --location 'https://sandbox.finmar.tech/prepare2/api/v3/checkout' \
+      --header 'Content-Type: application/json' \
+      --header 'Authorization: Basic cHJldmlld190ZXN0OndkMzAxN2F6aW01aXNva3E=' \
+      --data-raw '{
+      "client_operation_id": "DSPn7pryR4QYBQpCGq",
+      "report_metadata": "DSPn7pryR4QYBQpCGq",
+      "payment_profile": "sandbox",
+      "method": "openbanking",
+      "project_id":"s002",
+      "amount": {
+          "amount": "100",
+          "currency": "EUR"
+      },
+      "user": {
+          "user_id": "u123",
+          "email": "globocheck@gmail.com",
+          "statistics": {
+              "registered_at": "2021-11-02",
+              "total_deposit_count": 485,
+              "total_withdrawal_count": 693
+          }
+      },
+      "url_callback": "https://finmar.requestcatcher.com/?callback",
+      "url_redirect_success": "https://finmar.requestcatcher.com?success",
+      "url_redirect_fail": "https://finmar.requestcatcher.com?fail"
+      }'
+```
+
+### Пример ответа
+     
+  ```json
+    {
+    "success": true,
+    "result": {
+        "url": "https://crypto.cheipho.com/payment-front/76b6a829-a186-4dac-bfc2-17092882fc17",
+        "reference_id": "584cc07e-c402-4b1b-8f87-8aa51c567dd8"
+    },
+    "trace_id": "9d560b7391224345b68a0ae38244013c"
+}
+```
+
+## Обратные уведомления
+
+### Пример уведомления об успешной операции:
+ 
+```json
          {
             "reference_id": "584cc07e-c402-4b1b-8f87-8aa51c567dd8",
             "client_operation_id": "gXWCmoB379YxA0kiN4",
@@ -144,12 +176,9 @@ sequenceDiagram
             "payment_method_type": "fiat",
             "payment_method_code": "000_test_openbanking"
         }
-      ```
-    </Accordion>
-  </Step>
-
-  <Step title="Обработка уведомления">
-При обратного уведомления, наиболее значимые параметры:
+  ```
+  
+## Обработка операции
 
 <ParamField path="user_id" type="string">
   Идентификатор пользователя.
@@ -184,11 +213,15 @@ sequenceDiagram
   Код пплатёжного метода.
 </ParamField>
 
-  </Step>
 
-  <Step title="Подтверждение обработки">
-  После успешной обработки операции, необходимо подтвердить её обработку, используя методы [/collector/api/v3/client_confirm_payment_by_reference_id](/api-reference/фиатные-платежи/подтвердить-операцию-по-reference_id) или 
-  [/collector/api/v3/client_confirm_payment_by_client_operation_id](/api-reference/фиатные-платежи/подтвердить-операцию-по-client_operation_id)
-  </Step>
+## Подтверждение обработки операции
 
-</Steps>
+
+ ```bash Подтверждение операции
+   
+ curl --location 'https://sandbox.finmar.tech/collector/api/v3/client_confirm_success_payment_by_reference_id' \
+--data '{
+    "reference_id": "2390adbd-2c5b-4022-b62f-5245478a2584"
+}'
+```
+
