Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -6,7 +6,7 @@ description: "Документация по интеграции Finmar API"
 ## Фиатные платежи
 
 <CardGroup cols={2}>
-  <Card title="Банковские карты" icon="palette" href="products/card">
+  <Card title="Банковские карты" icon="credit-card" href="products/card">
   
   </Card>
   <Card title="Openbanking" icon="money-bill-transfer" href="/products/openbanking">
