Documentation edits made through Mintlify web editor

--- a/products/widget.mdx
+++ b/products/widget.mdx
@@ -1,12 +1,11 @@
 ---
 title: "Widget Integration"
-description: "Передовое платежное решение для приема депозитов с криптозеркалированием"
+description: "Платежное решение для приема платежей с криптозеркалированием"
 icon: "dumpster-fire"
 tag: "BETA"
 ---
 
 import TestCards from '/snippets/test-cards.mdx';
-
 import Callback from '/snippets/callback.mdx';
 
 ## Общая схема работы
