Documentation edits made through Mintlify web editor

--- a/requirements.mdx
+++ b/requirements.mdx
@@ -7,9 +7,9 @@ tag: "SOON"
  
  
 <img
-  style={{ borderRadius: '0.5rem',width: '300px' }}
+  style={{ borderRadius: '0.5rem',width: '200px' }}
   src="/images/writer.svg"
 />
 
-### Скоро
+Скоро здесь будет текст...
 
