Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -3,10 +3,19 @@ title: "Введение"
 description: "Документация по интеграции Finmar API"
 ---
   
+ 
+<img
+  style={{ borderRadius: '0.5rem',width: '200px' }}
+  src="/images/payments.svg"
+/>
+
 ## Фиатные платежи
 
 <CardGroup cols={2}>
   <Card title="Банковские карты" icon="credit-card" href="products/card">
+  
+  </Card>
+    <Card title="Widget Integration" icon="dumpster-fire" href="/products/widget">
   
   </Card>
   <Card title="Openbanking" icon="money-bill-transfer" href="/products/openbanking">
@@ -21,7 +30,5 @@ description: "Документация по интеграции Finmar API"
     <Card title="Blik" icon="mobile-button" href="/products/blik">
   
   </Card>
-      <Card title="Widget Integration" icon="dumpster-fire" href="/products/widget">
-  
-  </Card>
+
 </CardGroup>
