--- a/index.mdx
+++ b/index.mdx
@@ -2,33 +2,38 @@
 title: "Введение"
 description: "Документация по интеграции Finmar API"
 ---
-  
- 
+
+<Note>
+  В случае любых вопросов — обратитесь к менеджеру по интеграции в Telegram:
+
+  https://t.me/integrationVimapay
+</Note>
+
 <img
-  style={{ borderRadius: '0.5rem',width: '200px' }}
+  style={{ borderRadius:"0.5rem",width:"31%" }}
   src="/images/payments.svg"
+  className="mx-auto"
 />
 
 ## Фиатные платежи
 
 <CardGroup cols={2}>
-  <Card title="Банковские карты" icon="credit-card" href="products/card">
-  
+  <Card title="Банковские карты" icon="credit-card" horizontal href="products/card">
+    
   </Card>
-    <Card title="Widget Integration" icon="dumpster-fire" href="/products/widget">
-  
+  <Card title="Widget Integration" icon="dumpster-fire" horizontal href="/products/widget">
+    
   </Card>
-  <Card title="Openbanking" icon="money-bill-transfer" href="/products/openbanking">
-  
+  <Card title="Openbanking" icon="money-bill-transfer" horizontal href="/products/openbanking">
+    
   </Card>
-  <Card title="Apple Pay" icon="cc-apple-pay" href="/products/applepay">
-   
+  <Card title="Apple Pay" icon="cc-apple-pay" horizontal href="/products/applepay">
+    
   </Card>
-  <Card title="Google Pay" icon="google-pay" href="/products/googlepay">
-  
+  <Card title="Google Pay" icon="google-pay" horizontal href="/products/googlepay">
+    
   </Card>
-    <Card title="Blik" icon="mobile-button" href="/products/blik">
-  
+  <Card title="Blik" icon="mobile-button" horizontal href="/products/blik">
+    
   </Card>
-
 </CardGroup>
